--- a/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/App.xaml
+++ b/src/CasinovaColors/BlackAndWhite/Specs/ColorsGame.Specs/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-             x:Class="TheS.Casinova.ColorsGame.Specs.App"
+             x:Class="ColorsGame.Specs.App"
              >
     <Application.Resources>
         
