--- a/src/CasinovaColors/BlackAndWhite/ColorsGame.Web/Views/Shared/Site.Master
+++ b/src/CasinovaColors/BlackAndWhite/ColorsGame.Web/Views/Shared/Site.Master
@@ -24,6 +24,7 @@
                 <ul id="menu">              
                     <li><%: Html.ActionLink("Home", "Index", "Home")%></li>
                     <li><%: Html.ActionLink("About", "About", "Home")%></li>
+                    <li><%: Html.ActionLink("Silverlight", "../ColorsGameTestPage.aspx", "")%></li>
                 </ul>
             
             </div>
