--- a/src/CasinovaColors/BlackAndWhite/ColorsGame/ShowWinnerPage.xaml
+++ b/src/CasinovaColors/BlackAndWhite/ColorsGame/ShowWinnerPage.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ColorsGame_ViewModels="clr-namespace:ColorsGame.ViewModels" x:Class="ColorsGame.ShowWinnerPage"
+    xmlns:ColorsGame_ViewModels="clr-namespace:ColorsGame.ViewModels" xmlns:local="clr-namespace:ColorsGame" x:Class="ColorsGame.ShowWinnerPage"
     mc:Ignorable="d"
     d:DesignHeight="300" d:DesignWidth="400">
     
@@ -27,5 +27,6 @@
     	<TextBlock x:Name="TrackingID" TextWrapping="Wrap" Text="{Binding TrackingID}"/>
     	<TextBlock TextWrapping="Wrap" FontWeight="Bold" Text="Winner:"/>
     	<TextBlock x:Name="Winner" TextWrapping="Wrap" Text="{Binding Winner}"/>
+    	<local:CreateGameRoundPage d:LayoutOverrides="Height" Background="Black"/>
     </StackPanel>
 </UserControl>
