--- a/src/CasinovaColors/BlackAndWhite/ColorsGame/CreateGameRoundPage.xaml
+++ b/src/CasinovaColors/BlackAndWhite/ColorsGame/CreateGameRoundPage.xaml
@@ -35,6 +35,8 @@
 				<sdk:DataGridTextColumn Binding="{Binding TableID}" Header="TableID"/>
 			</sdk:DataGrid.Columns>
 		</sdk:DataGrid>
+		<TextBlock TextWrapping="Wrap" Text="Configuration Name" FontWeight="Bold"/>
+		<TextBox x:Name="ConfigurationName" TextWrapping="Wrap" Text="{Binding ConfigurationName, Mode=TwoWay}" Margin="50,0,0,0"/>
 		<Button x:Name="Generate" Content="Generate">
 			<i:Interaction.Triggers>
 				<i:EventTrigger EventName="Click">
