--- a/src/CasinovaMagic9/Magic9/Magic9Game/MainPage.xaml
+++ b/src/CasinovaMagic9/Magic9/Magic9Game/MainPage.xaml
@@ -1,14 +1,36 @@
-﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:Magic9Game_ViewModels="clr-namespace:Magic9Game.ViewModels" x:Class="Magic9Game.MainPage"
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:Magic9Game_ViewModels="clr-namespace:Magic9Game.ViewModels" xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="Magic9Game.MainPage"
     d:DesignHeight="800" d:DesignWidth="600" mc:Ignorable="d" Width="800" Height="600">
 
 	<UserControl.Resources>
-		<Magic9Game_ViewModels:MainPageViewModel x:Key="MainPageViewModelDataSource" d:IsDataSource="True"/>
+        <Style x:Key="Circle" TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Canvas Width="50" Height="50">
+                            <Ellipse Fill="Blue" Height="50" Stroke="Black" Width="50"/>
+                            <ContentPresenter Width="50" OpacityMask="Black" Height="15" HorizontalAlignment="Center" Canvas.Top="19" VerticalAlignment="Center"/>
+                        </Canvas>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Magic9Game_ViewModels:MainPageViewModel x:Key="MainPageViewModelDataSource" d:IsDataSource="True"/>
 		<DataTemplate x:Key="DoubleTemplate">
 			<StackPanel>
 				<TextBlock Text="{Binding Mode=OneWay}"/>
 			</StackPanel>
 		</DataTemplate>
 		<DataTemplate x:Key="StringTemplate">
+			<StackPanel>
+				<TextBlock Text="{Binding Mode=OneWay}"/>
+			</StackPanel>
+		</DataTemplate>
+		<DataTemplate x:Key="DoubleTemplate1">
+			<StackPanel>
+				<TextBlock Text="{Binding Mode=OneWay}"/>
+			</StackPanel>
+		</DataTemplate>
+		<DataTemplate x:Key="DoubleTemplate2">
 			<StackPanel>
 				<TextBlock Text="{Binding Mode=OneWay}"/>
 			</StackPanel>
@@ -51,6 +73,23 @@
     				</Storyboard>
     			</VisualState>
     		</VisualStateGroup>
+    		<VisualStateGroup x:Name="StartStopState">
+    			<VisualState x:Name="Start"/>
+    			<VisualState x:Name="Stop">
+    				<Storyboard>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(ContentControl.Content)" Storyboard.TargetName="StartStop">
+    						<DiscreteObjectKeyFrame KeyTime="0" Value="Stop"/>
+    					</ObjectAnimationUsingKeyFrames>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Control.IsEnabled)" Storyboard.TargetName="AutoBet">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<System:Boolean>False</System:Boolean>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
+    				</Storyboard>
+    			</VisualState>
+    		</VisualStateGroup>
     	</VisualStateManager.VisualStateGroups>
     	<Canvas x:Name="Title" Height="50" VerticalAlignment="Top">
     		<Rectangle Fill="Black" Stroke="Black" Height="50" Width="800"/>
@@ -63,7 +102,7 @@
     	<Button x:Name="Bet" Content="Bet" Margin="296,0,296,200" Height="68" VerticalAlignment="Bottom"/>
     	<Canvas x:Name="Pot" Height="107" Margin="195,190,195,0" VerticalAlignment="Top">
     		<Rectangle Fill="#FFFBFBFB" Height="107" Stroke="Black" Width="410" StrokeThickness="3" d:LayoutOverrides="Width"/>
-    		<TextBlock x:Name="POT" TextWrapping="Wrap" Text="{Binding Pot}" FontSize="26.667" TextAlignment="Center" Canvas.Top="32" Width="410" Visibility="Collapsed"/>
+    		<TextBlock x:Name="POT" TextWrapping="Wrap" Text="{Binding Pot}" FontSize="26.667" TextAlignment="Center" Canvas.Top="32" Width="410" />
 
     	</Canvas>
     	<Canvas x:Name="Auto" Height="49" Margin="8,0,8,8" VerticalAlignment="Bottom" Visibility="Collapsed">
