--- a/src/CasinovaMagic9/Magic9/Magic9Game/App.xaml
+++ b/src/CasinovaMagic9/Magic9/Magic9Game/App.xaml
@@ -4,5 +4,18 @@
              >
     <Application.Resources>
         
+    	<Style x:Key="Circle" TargetType="Button">
+    		<Setter Property="Template">
+    			<Setter.Value>
+    				<ControlTemplate TargetType="Button">
+    					<Grid>
+    						<Ellipse Fill="#FFF4F4F5" Stroke="Black"/>
+    						<ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+    					</Grid>
+    				</ControlTemplate>
+    			</Setter.Value>
+    		</Setter>
+    	</Style>
+        
     </Application.Resources>
 </Application>
