--- a/src/CasinovaDevil6/Devil6/Devil6Game/MainPage.xaml
+++ b/src/CasinovaDevil6/Devil6/Devil6Game/MainPage.xaml
@@ -1,10 +1,5 @@
-﻿<UserControl x:Class="Devil6Game.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="600" d:DesignWidth="800">
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="Devil6Game.MainPage"
+    d:DesignHeight="600" d:DesignWidth="800" mc:Ignorable="d">
 	<UserControl.Resources>
 		<DataTemplate x:Key="StringTemplate">
 			<StackPanel>
@@ -14,6 +9,39 @@
 	</UserControl.Resources>
 
     <Grid x:Name="LayoutRoot" Background="White">
+    	<VisualStateManager.VisualStateGroups>
+    		<VisualStateGroup x:Name="AutoBetState">
+    			<VisualState x:Name="Disable"/>
+    			<VisualState x:Name="Enable">
+    				<Storyboard>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="Auto">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<Visibility>Visible</Visibility>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
+    				</Storyboard>
+    			</VisualState>
+    		</VisualStateGroup>
+    		<VisualStateGroup x:Name="StartStopState">
+    			<VisualState x:Name="Start"/>
+    			<VisualState x:Name="Stop">
+    				<Storyboard>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(ContentControl.Content)" Storyboard.TargetName="StartStop">
+    						<DiscreteObjectKeyFrame KeyTime="0" Value="Stop"/>
+    					</ObjectAnimationUsingKeyFrames>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Control.IsEnabled)" Storyboard.TargetName="AutoBet">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<System:Boolean>False</System:Boolean>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
+    				</Storyboard>
+    			</VisualState>
+    		</VisualStateGroup>
+    	</VisualStateManager.VisualStateGroups>
     	<Canvas x:Name="Title" Height="50" VerticalAlignment="Top">
     		<Rectangle Fill="Black" Stroke="Black" Height="50" Width="800"/>
     		<TextBlock x:Name="TableName" TextWrapping="Wrap" Text="Devil 6" FontSize="26.667" Canvas.Left="6" Canvas.Top="6" FontWeight="Bold" Foreground="White"/>
@@ -22,14 +50,14 @@
     	<ScrollViewer x:Name="BetLogViewer" Height="100" Margin="0,50,0,0" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollBarVisibility="Disabled">
     		<StackPanel x:Name="BetLogData"/>
     	</ScrollViewer>
-    	<Button x:Name="BetOption1" Content="5" Margin="0,0,185,200" Height="68" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="208"/>
-    	<Button x:Name="BetOption2" Content="1" Margin="195,0,397,200" Height="68" VerticalAlignment="Bottom"/>
-    	<Canvas x:Name="Pot" Height="107" Margin="195,190,195,0" VerticalAlignment="Top">
+    	<Button x:Name="BetOption1" Content="5" Margin="407,332,0,0" Height="68" VerticalAlignment="Top" HorizontalAlignment="Left" Width="208"/>
+    	<Button x:Name="BetOption2" Content="1" Margin="195,332,0,0" Height="68" VerticalAlignment="Top" HorizontalAlignment="Left" Width="208"/>
+    	<Canvas x:Name="Pot" Height="107" Margin="195,190,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="410">
     		<Rectangle Fill="#FFFBFBFB" Height="107" Stroke="Black" Width="410" StrokeThickness="3" d:LayoutOverrides="Width"/>
     		<TextBlock x:Name="POT" TextWrapping="Wrap" FontSize="26.667" TextAlignment="Center" Canvas.Top="32" Width="410"/>
 
     	</Canvas>
-    	<Canvas x:Name="Auto" Height="49" Margin="8,0,8,8" VerticalAlignment="Bottom">
+    	<Canvas x:Name="Auto" Height="49" Margin="8,0,8,8" VerticalAlignment="Bottom" Visibility="Collapsed">
     		<Rectangle Fill="#FFF7F7F7" Height="49" Stroke="Black" Width="784"/>
     		<TextBlock TextWrapping="Wrap" Text="Amount" Canvas.Left="104" Canvas.Top="17" FontWeight="Bold"/>
     		<TextBox x:Name="Amount" TextWrapping="Wrap" Canvas.Left="156" Width="101" Canvas.Top="13"/>
