Move code in MainPage.xaml to each game page

--- a/src/CasinovaHighLow/HighAndLow/HighAndLow/MainPage.xaml
+++ b/src/CasinovaHighLow/HighAndLow/HighAndLow/MainPage.xaml
@@ -3,267 +3,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:HighAndLow_ViewModels="clr-namespace:HighAndLow.ViewModels" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" x:Class="HighAndLow.MainPage"
+
+	x:Class="HighAndLow.MainPage"
     mc:Ignorable="d"
     d:DesignHeight="300" d:DesignWidth="400" Width="800" Height="600">
 
-	<UserControl.Resources>
-		<HighAndLow_ViewModels:MainPageViewModel x:Key="MainPageViewModelDataSource" d:IsDataSource="True"/>
-		<DataTemplate x:Key="BetDefinitionTemplate">
-			<StackPanel>
-				<TextBlock Text="{Binding Bet}"/>
-				<CheckBox IsChecked="{Binding Status, Mode=TwoWay}"/>
-				<TextBlock Text="{Binding Time}"/>
-			</StackPanel>
-		</DataTemplate>
-	</UserControl.Resources>
-	<UserControl.DataContext>
-		<Binding Source="{StaticResource MainPageViewModelDataSource}"/>
-	</UserControl.DataContext>
-
-    <Grid x:Name="LayoutRoot" Background="White">
-    	<VisualStateManager.VisualStateGroups>
-    		<VisualStateGroup x:Name="MenuState">
-    			<VisualState x:Name="Disable">
-    				<Storyboard>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="Bet">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Visible</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="BetMenu">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="rectangle">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    				</Storyboard>
-    			</VisualState>
-    			<VisualState x:Name="Normal">
-    				<Storyboard>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="BetMenu">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Visible</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="textBlock1">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="Amount_Copy">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="textBlock2">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="Amount_Copy1">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="textBlock">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="Original">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Text)" Storyboard.TargetName="MenuTitle">
-    						<DiscreteObjectKeyFrame KeyTime="0" Value="Bet menu"/>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="Bet">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="rectangle">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Visible</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    				</Storyboard>
-    			</VisualState>
-    			<VisualState x:Name="Change">
-    				<Storyboard>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="Bet">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="BetMenu">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Visible</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="textBlock1">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="Amount_Copy">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="textBlock2">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="Amount_Copy1">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Collapsed</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Text)" Storyboard.TargetName="MenuTitle">
-    						<DiscreteObjectKeyFrame KeyTime="0" Value="Change"/>
-    					</ObjectAnimationUsingKeyFrames>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="rectangle">
-    						<DiscreteObjectKeyFrame KeyTime="0">
-    							<DiscreteObjectKeyFrame.Value>
-    								<Visibility>Visible</Visibility>
-    							</DiscreteObjectKeyFrame.Value>
-    						</DiscreteObjectKeyFrame>
-    					</ObjectAnimationUsingKeyFrames>
-    				</Storyboard>
-    			</VisualState>
-    		</VisualStateGroup>
-    		<VisualStateGroup x:Name="BetOptions">
-    			<VisualState x:Name="Single">
-    				<Storyboard>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(ContentControl.Content)" Storyboard.TargetName="Option">
-    						<DiscreteObjectKeyFrame KeyTime="0" Value="Single"/>
-    					</ObjectAnimationUsingKeyFrames>
-    				</Storyboard>
-    			</VisualState>
-    			<VisualState x:Name="Range">
-    				<Storyboard>
-    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(ContentControl.Content)" Storyboard.TargetName="Option">
-    						<DiscreteObjectKeyFrame KeyTime="0" Value="Range"/>
-    					</ObjectAnimationUsingKeyFrames>
-    				</Storyboard>
-    			</VisualState>
-    		</VisualStateGroup>
-    	</VisualStateManager.VisualStateGroups>
-    	<Canvas x:Name="Title" Height="50" VerticalAlignment="Top">
-    		<Rectangle Fill="Black" Stroke="Black" Height="50" Width="800"/>
-    		<TextBlock x:Name="TableName" TextWrapping="Wrap" Text="High and Low" FontSize="26.667" Canvas.Left="6" Canvas.Top="6" FontWeight="Bold" Foreground="White"/>
-
-    	</Canvas>
-    	<Canvas x:Name="Winner" HorizontalAlignment="Left" Height="115" Margin="8,69,0,0" VerticalAlignment="Top" Width="291">
-    		<Rectangle Fill="#FFF4F4F5" Height="115" Stroke="Black" Width="291"/>
-    		<TextBlock TextWrapping="Wrap" Text="High:" FontSize="18.667" Canvas.Left="12" Canvas.Top="8" FontWeight="Bold"/>
-    		<TextBlock TextWrapping="Wrap" Text="Low:" FontSize="18.667" Canvas.Left="12" Canvas.Top="44" FontWeight="Bold"/>
-    		<TextBlock TextWrapping="Wrap" FontSize="18.667" Canvas.Left="12" Canvas.Top="80" FontWeight="Bold"><Run Text="H"/><Run Text="and:"/></TextBlock>
-    		<TextBlock x:Name="WinnerHighName" TextWrapping="Wrap" Text="{Binding WinnerHighName}" FontSize="18.667" Canvas.Left="78" Canvas.Top="8"/>
-    		<TextBlock x:Name="WinnerLowName" TextWrapping="Wrap" Text="{Binding WinnerLowName}" FontSize="18.667" Canvas.Left="78" Canvas.Top="44"/>
-    		<TextBlock x:Name="WinnerHighRange" TextWrapping="Wrap" Text="{Binding WinnerHighRange}" FontSize="18.667" Canvas.Left="181" Canvas.Top="8"/>
-    		<TextBlock x:Name="WinnerLowRange" TextWrapping="Wrap" Text="{Binding WinnerLowRange}" FontSize="18.667" Canvas.Left="181" Canvas.Top="44"/>
-    		<TextBlock x:Name="GameHandsRange" TextWrapping="Wrap" FontSize="18.667" Canvas.Left="78" Canvas.Top="80" Text="{Binding GameHandsRange}"/>
-    	</Canvas>
-    	<Canvas x:Name="GameInformation" Height="106" Margin="323,78,20,0" VerticalAlignment="Top">
-    		<TextBlock TextWrapping="Wrap" Text="State:" FontSize="18.667" FontWeight="Bold"/>
-    		<TextBlock TextWrapping="Wrap" Text="Time:" FontSize="18.667" FontWeight="Bold" Canvas.Left="237"/>
-    		<TextBlock x:Name="GameStatus" TextWrapping="Wrap" Text="{Binding GameStatus}" FontSize="18.667" Canvas.Left="67"/>
-    		<TextBlock x:Name="GameTime" TextWrapping="Wrap" Text="{Binding GameTime}" FontSize="18.667" Width="157" Canvas.Left="300"/>
-    		<TextBlock x:Name="POT" TextWrapping="Wrap" Text="{Binding Pot}" FontSize="48" FontWeight="Bold" TextAlignment="Center" Canvas.Top="36" Width="457"/>
-    	</Canvas>
-    	<Rectangle x:Name="rectangle" Fill="Black" Stroke="Black" Opacity="0.6" Visibility="Collapsed"/>
-    	<ListBox x:Name="BetList" HorizontalAlignment="Left" Margin="8,227,0,8" Width="291" ItemTemplate="{StaticResource BetDefinitionTemplate}" ItemsSource="{Binding Bets}"/>
-    	<Button x:Name="Bet" Content="Bet" Height="46" Margin="314,227,20,0" VerticalAlignment="Top">
-    		<i:Interaction.Triggers>
-    			<i:EventTrigger EventName="Click">
-    				<ei:GoToStateAction StateName="Normal"/>
-    			</i:EventTrigger>
-    		</i:Interaction.Triggers>
-    	</Button>
-    	<Canvas x:Name="BetMenu" Margin="303,227,8,158" Visibility="Collapsed">
-    		<Rectangle Fill="#FFF4F4F5" Stroke="Black" Height="215" VerticalAlignment="Top" Width="489"/>
-    		<Rectangle Fill="Gainsboro" Stroke="Black" Height="22" VerticalAlignment="Top" Width="489"/>
-    		<TextBlock x:Name="MenuTitle" TextWrapping="Wrap" Text="Menu Title" TextAlignment="Center" FontWeight="Bold" Canvas.Top="3" Width="489"/>
-    		<TextBlock x:Name="textBlock" HorizontalAlignment="Right" TextWrapping="Wrap" Text="Original" VerticalAlignment="Bottom" FontWeight="Bold" FontSize="13.333" Canvas.Left="67" Canvas.Top="134" RenderTransformOrigin="0.5,0.5">
-    			<TextBlock.RenderTransform>
-    				<CompositeTransform/>
-    			</TextBlock.RenderTransform>
-    		</TextBlock>
-    		<TextBlock x:Name="textBlock3" HorizontalAlignment="Right" TextWrapping="Wrap" Text="Amount" VerticalAlignment="Bottom" FontWeight="Bold" FontSize="13.333" Canvas.Left="67" Canvas.Top="107" RenderTransformOrigin="0.5,0.5">
-    			<TextBlock.RenderTransform>
-    				<CompositeTransform/>
-    			</TextBlock.RenderTransform>
-    		</TextBlock>
-    		<Slider x:Name="SingleSlider" Canvas.Left="67" Canvas.Top="33" Width="410"/>
-    		<TextBlock x:Name="Original" HorizontalAlignment="Right" TextWrapping="Wrap" Text="Amount" VerticalAlignment="Bottom" Width="347" FontSize="13.333" Canvas.Left="130" Canvas.Top="134" RenderTransformOrigin="0.5,0.5">
-    			<TextBlock.RenderTransform>
-    				<CompositeTransform/>
-    			</TextBlock.RenderTransform>
-    		</TextBlock>
-    		<TextBlock x:Name="Minimum" TextWrapping="Wrap" Text="Minimum" FontSize="13.333" Canvas.Left="67" Canvas.Top="55" Width="134"/>
-    		<TextBlock x:Name="Maximum" TextWrapping="Wrap" Text="Maximum" FontSize="13.333" Width="134" TextAlignment="Right" Canvas.Left="343" Canvas.Top="55"/>
-    		<Button x:Name="Option" Content="Single" Width="52" Height="41" Canvas.Left="11" Canvas.Top="33"/>
-    		<TextBox x:Name="Amount" TextWrapping="Wrap" Width="347" Canvas.Left="130" Canvas.Top="106" RenderTransformOrigin="0.5,0.5">
-    			<TextBox.RenderTransform>
-    				<CompositeTransform/>
-    			</TextBox.RenderTransform>
-    		</TextBox>
-    		<Button x:Name="Submit" Content="Submit" Height="46" Canvas.Left="11" Canvas.Top="157" Width="466">
-    			<i:Interaction.Triggers>
-    				<i:EventTrigger EventName="Click">
-    					<ei:GoToStateAction StateName="Disable"/>
-    				</i:EventTrigger>
-    			</i:Interaction.Triggers>
-    		</Button>
-    		<TextBlock x:Name="textBlock1" HorizontalAlignment="Right" TextWrapping="Wrap" Text="From" VerticalAlignment="Bottom" FontWeight="Bold" FontSize="13.333" Canvas.Left="67" Canvas.Top="79"/>
-    		<TextBox x:Name="Amount_Copy" TextWrapping="Wrap" Width="159" Canvas.Left="130" Canvas.Top="78"/>
-    		<TextBlock x:Name="textBlock2" HorizontalAlignment="Right" TextWrapping="Wrap" Text="to" VerticalAlignment="Bottom" FontWeight="Bold" FontSize="13.333" Canvas.Left="293" Canvas.Top="79" Width="21" TextAlignment="Center"/>
-    		<TextBox x:Name="Amount_Copy1" TextWrapping="Wrap" Width="159" Canvas.Left="318" Canvas.Top="78"/>
-    	</Canvas>
-    </Grid>
+    <Grid x:Name="LayoutRoot" Background="White"/>
 </UserControl>
