add Controllers & silverlight

--- a/src/SPerfAll/sPerf_Web/App_themes/sPerf/Sites.css
+++ b/src/SPerfAll/sPerf_Web/App_themes/sPerf/Sites.css
@@ -60,6 +60,11 @@
     float: left;
     font-weight: bold;
 }
+.linkmenu .menu
+{
+    padding-top: 15px;
+    text-align: center;
+}
 .linkmenu a
 {
     text-align: center;
