--- a/src/CasinovaAll/Silverlights/CasinovaAllStars/App.xaml
+++ b/src/CasinovaAll/Silverlights/CasinovaAllStars/App.xaml
@@ -1,8 +1,14 @@
-﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-             x:Class="CasinovaAllStars.App"
-             >
-    <Application.Resources>
-        
-    </Application.Resources>
+﻿<Application   
+  x:Class="CasinovaAllStars.App"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+  <Application.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Assets/Styles.xaml"/>
+      </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
+  </Application.Resources>
+
 </Application>
